force-app/main/default/objects/Account/fields/account_t1code_syukei__c.field-meta.xml
<CustomField>
    <fullName>account_t1code_syukei__c</fullName>
    <formula>IF ( ISBLANK(account_t1code__c) ,  Name ,  account_t1code__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>T1コード_集計</label>
    <type>Text</type>
</CustomField>