force-app/main/default/objects/Account/fields/account_t2code__c.field-meta.xml
<CustomField>
    <fullName>account_t2code__c</fullName>
    <label>T2コード</label>
    <length>200</length>
    <type>Text</type>
</CustomField>