force-app/main/default/objects/Account/fields/AccountID__c.field-meta.xml
<CustomField>
    <fullName>AccountID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>会社ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>