force-app/main/default/objects/Account/fields/AccountStage_All__c.field-meta.xml
<CustomField>
    <fullName>AccountStage_All__c</fullName>
    <label>取引先ステージ_共通</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>00</fullName>
                <label>未接触</label>
            </value>
            <value>
                <fullName>01</fullName>
                <label>1回目訪問</label>
            </value>
            <value>
                <fullName>02</fullName>
                <label>モビライザー到達</label>
            </value>
            <value>
                <fullName>03</fullName>
                <label>先方の課題把握</label>
            </value>
            <value>
                <fullName>04</fullName>
                <label>物件探索開始</label>
            </value>
            <value>
                <fullName>05</fullName>
                <label>物件特定</label>
            </value>
            <value>
                <fullName>06</fullName>
                <label>初回受注</label>
            </value>
            <value>
                <fullName>07</fullName>
                <label>2件目受注</label>
            </value>
            <value>
                <fullName>08</fullName>
                <label>複数物件モード</label>
            </value>
            <value>
                <fullName>09</fullName>
                <label>上申シナリオ協議</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>上申シナリオ合意</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>上申協議</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>合意</label>
            </value>
            <value>
                <fullName>13</fullName>
                <label>標準利用締結</label>
            </value>
            <value>
                <fullName>3</fullName>
                <isActive>false</isActive>
                <label>2回目のアポイント承諾</label>
            </value>
            <value>
                <fullName>6</fullName>
                <isActive>false</isActive>
                <label>トライアル採用支援</label>
            </value>
            <value>
                <fullName>7</fullName>
                <isActive>false</isActive>
                <label>中止</label>
            </value>
            <value>
                <fullName>技術評価クリア</fullName>
                <isActive>false</isActive>
                <label>技術評価クリア</label>
            </value>
            <value>
                <fullName>見積提出</fullName>
                <isActive>false</isActive>
                <label>見積提出</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>