force-app/main/default/objects/Account/fields/AccountStage_All_No__c.field-meta.xml
<CustomField>
    <fullName>AccountStage_All_No__c</fullName>
    <formula>TEXT(AccountStage_All__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>取引先ステージ№</label>
    <type>Text</type>
</CustomField>