force-app/main/default/objects/Account/fields/AccountStage_Osaka__c.field-meta.xml
<CustomField>
    <fullName>AccountStage_Osaka__c</fullName>
    <label>取引先ステージ_大阪</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>未接触</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>1回目のアポイント承諾</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>2回目のアポイント承諾</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>BuildAppを理解させる</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>課題特定</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>トライアル採用支援</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>中止</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>契約締結</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>自社とBuildAppの成功確認</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>商用利用契約</label>
            </value>
            <value>
                <fullName>技術評価クリア</fullName>
                <isActive>false</isActive>
                <label>技術評価クリア</label>
            </value>
            <value>
                <fullName>見積提出</fullName>
                <isActive>false</isActive>
                <label>見積提出</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>