force-app/main/default/objects/Account/fields/AccountURL__c.field-meta.xml
<CustomField>
    <fullName>AccountURL__c</fullName>
    <formula>HYPERLINK(&quot;https://forcecom175.lightning.force.com/lightning/r/Account/&quot;&amp; Id&amp;&quot;/view&quot;, &quot;得意先リンク&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>得意先URL</label>
    <type>Text</type>
</CustomField>