force-app/main/default/objects/Account/fields/CE_Mail__c.field-meta.xml
<CustomField>
    <fullName>CE_Mail__c</fullName>
    <label>セメント用通知メールアドレス</label>
    <length>255</length>
    <type>Text</type>
</CustomField>