force-app/main/default/objects/Account/fields/CheckJU_CustomerFeaturesFutureEfforts__c.field-meta.xml
<CustomField>
    <fullName>CheckJU_CustomerFeaturesFutureEfforts__c</fullName>
    <defaultValue>false</defaultValue>
    <label>/空白判定_得意先の特徴・今後の取り組み</label>
    <type>Checkbox</type>
</CustomField>