force-app/main/default/objects/Account/fields/ClosingMonth__c.field-meta.xml
<CustomField>
    <fullName>ClosingMonth__c</fullName>
    <label>決算月</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>