force-app/main/default/objects/Account/fields/ContractAmount__c.field-meta.xml
<CustomField>
    <fullName>ContractAmount__c</fullName>
    <label>契約金額</label>
    <summarizedField>Opportunity.ContractAmount__c</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.steel_OrderDate__c</field>
        <operation>greaterOrEqual</operation>
        <value>7/1/2025</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.steel_OrderDate__c</field>
        <operation>lessOrEqual</operation>
        <value>6/30/2026</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.RecordTypeId</field>
        <operation>equals</operation>
        <value>スチール_工事, ノハラスチール_工事_目標</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>内定, 受注ST, 仕掛, 完成</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>