force-app/main/default/objects/Account/fields/CorporateNumber__c.field-meta.xml
<CustomField>
    <fullName>CorporateNumber__c</fullName>
    <label>法人番号</label>
    <length>255</length>
    <type>Text</type>
</CustomField>