force-app/main/default/objects/Account/fields/CS_FollowPattern__c.field-meta.xml
<CustomField>
    <fullName>CS_FollowPattern__c</fullName>
    <label>フォローパターン</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>個別</fullName>
            </value>
            <value>
                <fullName>全数</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>