force-app/main/default/objects/Account/fields/CS_hosyoukin__c.field-meta.xml
<CustomField>
    <fullName>CS_hosyoukin__c</fullName>
    <defaultValue>false</defaultValue>
    <label>保証金（積み立て）</label>
    <type>Checkbox</type>
</CustomField>