force-app/main/default/objects/Account/fields/CS_ImportantCon__c.field-meta.xml
<CustomField>
    <fullName>CS_ImportantCon__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CS_重要元請</label>
    <type>Checkbox</type>
</CustomField>