force-app/main/default/objects/Account/fields/CS_ImportantInfo__c.field-meta.xml
<CustomField>
    <fullName>CS_ImportantInfo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CS_重要情報源</label>
    <type>Checkbox</type>
</CustomField>