force-app/main/default/objects/Account/fields/CS_PreFY_DirectOrderRate__c.field-meta.xml
<CustomField>
    <fullName>CS_PreFY_DirectOrderRate__c</fullName>
    <label>前期元請物件受注率</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>