force-app/main/default/objects/Account/fields/CS_seikyueigyoubi__c.field-meta.xml
<CustomField>
    <fullName>CS_seikyueigyoubi__c</fullName>
    <label>請求書必着日（営業日）</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>１日</fullName>
            </value>
            <value>
                <fullName>２日</fullName>
            </value>
            <value>
                <fullName>３日</fullName>
            </value>
            <value>
                <fullName>４日</fullName>
            </value>
            <value>
                <fullName>５日</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>