force-app/main/default/objects/Account/fields/CS_seikyukanrenlink__c.field-meta.xml
<CustomField>
    <fullName>CS_seikyukanrenlink__c</fullName>
    <label>請求関連_格納先リンク</label>
    <type>Url</type>
</CustomField>