force-app/main/default/objects/Account/fields/CS_seikyusyohittyakubi__c.field-meta.xml
<CustomField>
    <fullName>CS_seikyusyohittyakubi__c</fullName>
    <label>請求書必着日</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>