force-app/main/default/objects/Account/fields/CS_seikyuusyosyosiki__c.field-meta.xml
<CustomField>
    <fullName>CS_seikyuusyosyosiki__c</fullName>
    <label>請求書書式</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>野原書式</fullName>
            </value>
            <value>
                <fullName>専用請求書</fullName>
            </value>
            <value>
                <fullName>WEB</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>