force-app/main/default/objects/Account/fields/CS_sennryakukubun__c.field-meta.xml
<CustomField>
    <fullName>CS_sennryakukubun__c</fullName>
    <label>戦略区分_CS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>仕入先</fullName>
            </value>
            <value>
                <fullName>施主</fullName>
            </value>
            <value>
                <fullName>専門工事</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
            <value>
                <fullName>その他総合</fullName>
            </value>
            <value>
                <fullName>その他元請</fullName>
            </value>
            <value>
                <fullName>丹青傘下</fullName>
            </value>
            <value>
                <fullName>乃村傘下</fullName>
            </value>
            <value>
                <fullName>スペース傘下</fullName>
            </value>
            <value>
                <fullName>船場傘下</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>