force-app/main/default/objects/Account/fields/CS_siharaiannai__c.field-meta.xml
<CustomField>
    <fullName>CS_siharaiannai__c</fullName>
    <label>支払案内</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>WEB</fullName>
            </value>
            <value>
                <fullName>FAX</fullName>
            </value>
            <value>
                <fullName>メール</fullName>
            </value>
            <value>
                <fullName>郵送</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>