force-app/main/default/objects/Account/fields/CS_sonotatext__c.field-meta.xml
<CustomField>
    <fullName>CS_sonotatext__c</fullName>
    <label>請求関連_その他</label>
    <type>TextArea</type>
</CustomField>