force-app/main/default/objects/Account/fields/CS_souhuhouhoutext__c.field-meta.xml
<CustomField>
    <fullName>CS_souhuhouhoutext__c</fullName>
    <label>送付方法（テキスト）</label>
    <type>TextArea</type>
</CustomField>