force-app/main/default/objects/Account/fields/CS_sousai__c.field-meta.xml
<CustomField>
    <fullName>CS_sousai__c</fullName>
    <defaultValue>false</defaultValue>
    <label>相殺</label>
    <type>Checkbox</type>
</CustomField>