force-app/main/default/objects/Account/fields/CS_sousai_text__c.field-meta.xml
<CustomField>
    <fullName>CS_sousai_text__c</fullName>
    <label>相殺_テキスト</label>
    <type>TextArea</type>
</CustomField>