force-app/main/default/objects/Account/fields/CS_ThisFY_Interior_WinRate__c.field-meta.xml
<CustomField>
    <fullName>CS_ThisFY_Interior_WinRate__c</fullName>
    <label>今期総合内装/工事店受注率</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>