force-app/main/default/objects/Account/fields/CS_ThisFY_Strategy_Win_Rate__c.field-meta.xml
<CustomField>
    <fullName>CS_ThisFY_Strategy_Win_Rate__c</fullName>
    <label>今期戦略区分別物件受注率</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>