force-app/main/default/objects/Account/fields/CS_tokuisakikubun1__c.field-meta.xml
<CustomField>
    <fullName>CS_tokuisakikubun1__c</fullName>
    <label>得意先区分1_CS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>商社・問屋</fullName>
            </value>
            <value>
                <fullName>スポット</fullName>
            </value>
            <value>
                <fullName>施主</fullName>
            </value>
            <value>
                <fullName>設計・デザイナー</fullName>
            </value>
            <value>
                <fullName>専門工事</fullName>
            </value>
            <value>
                <fullName>総合内装</fullName>
            </value>
            <value>
                <fullName>メーカー</fullName>
            </value>
            <value>
                <fullName>元請</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>