force-app/main/default/objects/Account/fields/CS_zyoutyukaryu__c.field-meta.xml
<CustomField>
    <fullName>CS_zyoutyukaryu__c</fullName>
    <label>上中下流_CS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>川上</fullName>
            </value>
            <value>
                <fullName>中流</fullName>
            </value>
            <value>
                <fullName>川下</fullName>
            </value>
            <value>
                <fullName>大阪</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>