force-app/main/default/objects/Account/fields/CSM_SFDC_RuisekiLost_Amount__c.field-meta.xml
<CustomField>
    <fullName>CSM_SFDC_RuisekiLost_Amount__c</fullName>
    <label>累積失注金額</label>
    <summarizedField>Opportunity.Amount</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.IsClosed</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.IsWon</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>