force-app/main/default/objects/Account/fields/CW_AccountExternalKey__c.field-meta.xml
<CustomField>
    <fullName>CW_AccountExternalKey__c</fullName>
    <externalId>true</externalId>
    <label>CSWEB取り込み用（外部キー）</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>