force-app/main/default/objects/Account/fields/CW_AccountOwnerRole__c.field-meta.xml
<CustomField>
    <fullName>CW_AccountOwnerRole__c</fullName>
    <formula>CW_OwnerId__r.UserRole.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>得意先所有者ロール_CW</label>
    <type>Text</type>
</CustomField>