force-app/main/default/objects/Account/fields/CW_AccountType__c.field-meta.xml
<CustomField>
    <fullName>CW_AccountType__c</fullName>
    <label>得意先区分</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>乃村傘下</fullName>
            </value>
            <value>
                <fullName>丹青傘下</fullName>
            </value>
            <value>
                <fullName>その他元請</fullName>
            </value>
            <value>
                <fullName>その他総合内装</fullName>
            </value>
            <value>
                <fullName>専門工事</fullName>
            </value>
            <value>
                <fullName>施主</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
            <value>
                <fullName>乃村型元請</fullName>
                <isActive>false</isActive>
                <label>乃村型元請</label>
            </value>
            <value>
                <fullName>乃村型総合</fullName>
                <isActive>false</isActive>
                <label>乃村型総合</label>
            </value>
            <value>
                <fullName>乃村本体</fullName>
                <isActive>false</isActive>
                <label>乃村本体</label>
            </value>
            <value>
                <fullName>乃村総合</fullName>
                <isActive>false</isActive>
                <label>乃村総合</label>
            </value>
            <value>
                <fullName>再販</fullName>
                <isActive>false</isActive>
                <label>再販</label>
            </value>
            <value>
                <fullName>分離型</fullName>
                <isActive>false</isActive>
                <label>分離型</label>
            </value>
            <value>
                <fullName>分離型購買</fullName>
                <isActive>false</isActive>
                <label>分離型購買</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>