force-app/main/default/objects/Account/fields/CW_CreatedDate__c.field-meta.xml
<CustomField>
    <fullName>CW_CreatedDate__c</fullName>
    <label>個社別管理開始日_CW</label>
    <type>DateTime</type>
</CustomField>