force-app/main/default/objects/Account/fields/CW_Estimate__c.field-meta.xml
<CustomField>
    <fullName>CW_Estimate__c</fullName>
    <label>積算・見積もり人数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>