force-app/main/default/objects/Account/fields/CW_ExistenceOfOwnFactory__c.field-meta.xml
<CustomField>
    <fullName>CW_ExistenceOfOwnFactory__c</fullName>
    <label>自社工場の有無</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>有</fullName>
            </value>
            <value>
                <fullName>無</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>