force-app/main/default/objects/Account/fields/CW_hosyou__c.field-meta.xml
<CustomField>
    <fullName>CW_hosyou__c</fullName>
    <label>保全情報</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CW_hosyou_ari</fullName>
                <label>有</label>
            </value>
            <value>
                <fullName>CW_hosyou_nashi</fullName>
                <label>無</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>