force-app/main/default/objects/Account/fields/CW_kouryaku1__c.field-meta.xml
<CustomField>
    <fullName>CW_kouryaku1__c</fullName>
    <label>攻略優先度</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>なし</fullName>
            </value>
            <value>
                <fullName>高</fullName>
            </value>
            <value>
                <fullName>中</fullName>
            </value>
            <value>
                <fullName>低</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>