force-app/main/default/objects/Account/fields/cw_KPI_7__c.field-meta.xml
<CustomField>
    <fullName>cw_KPI_7__c</fullName>
    <label>KPI_7期目標見積金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>