force-app/main/default/objects/Account/fields/cw_KPI_7_point__c.field-meta.xml
<CustomField>
    <fullName>cw_KPI_7_point__c</fullName>
    <label>KPI_7期目標関係構築ポイント</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>