force-app/main/default/objects/Account/fields/cw_KPI_yuukouhoumonkennsu__c.field-meta.xml
<CustomField>
    <fullName>cw_KPI_yuukouhoumonkennsu__c</fullName>
    <label>KPI_7期目標有効訪問件数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>