force-app/main/default/objects/Account/fields/CW_LastModifiedById__c.field-meta.xml
<CustomField>
    <fullName>CW_LastModifiedById__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>最終更新者 ID_CW</label>
    <referenceTo>User</referenceTo>
    <relationshipName>AChpk1</relationshipName>
    <type>Lookup</type>
</CustomField>