force-app/main/default/objects/Account/fields/CW_Material1__c.field-meta.xml
<CustomField>
    <fullName>CW_Material1__c</fullName>
    <label>資材1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>