force-app/main/default/objects/Account/fields/CW_Material2__c.field-meta.xml
<CustomField>
    <fullName>CW_Material2__c</fullName>
    <label>資材2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>