force-app/main/default/objects/Account/fields/CW_Material3__c.field-meta.xml
<CustomField>
    <fullName>CW_Material3__c</fullName>
    <label>資材3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>