force-app/main/default/objects/Account/fields/CW_MaterialTradingCompany2__c.field-meta.xml
<CustomField>
    <fullName>CW_MaterialTradingCompany2__c</fullName>
    <label>資材商社2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>