force-app/main/default/objects/Account/fields/CW_MaterialTradingCompany3__c.field-meta.xml
<CustomField>
    <fullName>CW_MaterialTradingCompany3__c</fullName>
    <label>資材商社3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>