force-app/main/default/objects/Account/fields/CW_MaterialTradingCompany4__c.field-meta.xml
<CustomField>
    <fullName>CW_MaterialTradingCompany4__c</fullName>
    <label>資材商社4</label>
    <length>255</length>
    <type>Text</type>
</CustomField>