force-app/main/default/objects/Account/fields/CW_MyChargeFlg__c.field-meta.xml
<CustomField>
    <fullName>CW_MyChargeFlg__c</fullName>
    <formula>IF( $User.Id =  CW_OwnerId__r.Id  ,true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>*私の担当先Flg_CW</label>
    <type>Checkbox</type>
</CustomField>