force-app/main/default/objects/Account/fields/CW_nensyou__c.field-meta.xml
<CustomField>
    <fullName>CW_nensyou__c</fullName>
    <label>年商（百万）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>