force-app/main/default/objects/Account/fields/CW_NewOrExisting__c.field-meta.xml
<CustomField>
    <fullName>CW_NewOrExisting__c</fullName>
    <label>新規/既存</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>新規</fullName>
            </value>
            <value>
                <fullName>既存</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>