force-app/main/default/objects/Account/fields/CW_Others__c.field-meta.xml
<CustomField>
    <fullName>CW_Others__c</fullName>
    <label>その他人数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>