force-app/main/default/objects/Account/fields/CW_OwnerId__c.field-meta.xml
<CustomField>
    <fullName>CW_OwnerId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>得意先 所有者_CW</label>
    <referenceTo>User</referenceTo>
    <relationshipName>AChpFN</relationshipName>
    <type>Lookup</type>
</CustomField>