force-app/main/default/objects/Account/fields/CW_SalesCount__c.field-meta.xml
<CustomField>
    <fullName>CW_SalesCount__c</fullName>
    <description>住環境のフェーズがAの件数をカウント</description>
    <label>過去受注件数(CSWEB)</label>
    <summaryFilterItems>
        <field>Opportunity.RecordTypeId</field>
        <operation>equals</operation>
        <value>CSWEB</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>A</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>