force-app/main/default/objects/Account/fields/CW_SiteManagementNumber__c.field-meta.xml
<CustomField>
    <fullName>CW_SiteManagementNumber__c</fullName>
    <label>現場管理人数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>