force-app/main/default/objects/Account/fields/CW_Supplement__c.field-meta.xml
<CustomField>
    <fullName>CW_Supplement__c</fullName>
    <label>補足</label>
    <length>255</length>
    <type>Text</type>
</CustomField>