force-app/main/default/objects/Account/fields/CW_target__c.field-meta.xml
<CustomField>
    <fullName>CW_target__c</fullName>
    <label>CSWEBターゲット顧客</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>戦略既存店</fullName>
            </value>
            <value>
                <fullName>戦略希薄店</fullName>
            </value>
            <value>
                <fullName>戦略休眠・新規</fullName>
            </value>
            <value>
                <fullName>主要店</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>