force-app/main/default/objects/Account/fields/CW_TargetClearNumber__c.field-meta.xml
<CustomField>
    <fullName>CW_TargetClearNumber__c</fullName>
    <defaultValue>0</defaultValue>
    <description>関係構築の攻略人数をフローで当項目に反映</description>
    <label>攻略人数_CW</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>