force-app/main/default/objects/Account/fields/CW_TargetNumber__c.field-meta.xml
<CustomField>
    <fullName>CW_TargetNumber__c</fullName>
    <inlineHelpText>新規顧客の場合入力</inlineHelpText>
    <label>攻略目標人数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>