force-app/main/default/objects/Account/fields/cw_tokuisakigaibukey__c.field-meta.xml
<CustomField>
    <fullName>cw_tokuisakigaibukey__c</fullName>
    <label>CS得意先外部キー</label>
    <length>200</length>
    <type>Text</type>
</CustomField>