force-app/main/default/objects/Account/fields/Cw_yoshin1__c.field-meta.xml
<CustomField>
    <fullName>Cw_yoshin1__c</fullName>
    <label>与信限度額(CS)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>