force-app/main/default/objects/Account/fields/cw_yoshinmemo__c.field-meta.xml
<CustomField>
    <fullName>cw_yoshinmemo__c</fullName>
    <label>与信関連メモ</label>
    <length>200</length>
    <type>Text</type>
</CustomField>