force-app/main/default/objects/Account/fields/CW_yoshinrank__c.field-meta.xml
<CustomField>
    <fullName>CW_yoshinrank__c</fullName>
    <label>与信ランク</label>
    <length>200</length>
    <type>Text</type>
</CustomField>