force-app/main/default/objects/Account/fields/DX_AccountPlanURL__c.field-meta.xml
<CustomField>
    <fullName>DX_AccountPlanURL__c</fullName>
    <label>アカウントプランURL</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>