force-app/main/default/objects/Account/fields/DX_Address__c.field-meta.xml
<CustomField>
    <fullName>DX_Address__c</fullName>
    <label>本社所在地_DX</label>
    <length>100</length>
    <type>Text</type>
</CustomField>