force-app/main/default/objects/Account/fields/DX_Affiliations__c.field-meta.xml
<CustomField>
    <fullName>DX_Affiliations__c</fullName>
    <label>提携企業</label>
    <length>255</length>
    <type>Text</type>
</CustomField>