force-app/main/default/objects/Account/fields/DX_AmountSales__c.field-meta.xml
<CustomField>
    <fullName>DX_AmountSales__c</fullName>
    <label>売上高</label>
    <length>255</length>
    <type>Text</type>
</CustomField>